# 2023.08.31 (Build 8)
## Added

* Support for providing custom SSL keys and certificates.

## Fixed

* An issue with opening topics from the Consumer Group Detail view
  when filtering was applied.

## Notes

* As of the next version (Build 9), Franz will require macOS 13+.

# 2023.07.14 (Build 7)
## Added

* Support for LZ4 decompression.
* Support for Snappy decompression.
* Support for Zstandard decompression.
* Schema Registry support for Protocol Buffers.

# 2023.02.17 (Build 6)
## Added

* Support for configuring per-connection defaults from Preferences.

## Changed

* Total group lag is now displayed in the Workspace sidebar.  It's
  possible to customize these stats from the Preferences Window.

# 2023.01.20 (Build 5)
## Added

* The Consumer Groups tab to the Topic Detail view.
* The Schema Detail view.
* Tab support for Workspaces.
* Support for decoding committed offsets from Lua.

## Changed

* The Record Table now loads the latest 20 for each partition on open.
* The Record Detail viewer opens to the tab corresponding to the
  clicked column.
* Double-clicking the dividers between Record Table columns now sizes
  the respective columns to fit according to the longest value (best
  effort).
* Record Table key & value columns are now truncated at 4k bytes
  instead 300 bytes.
* Config Tables now support copying keys & values.

# 2023.01.06 (Build 4)
## Added

* Schema Registry support.
* A Record detail viewer.  Double-click records in the Topic Records
  Table to see their data in full.

## Changed

* The Records Table "Reset..." button has been renamed to "Jump..."
  to make it clear that it's not performing a destructive action.
* LZ4 decompression performance is improved.
* Avro decoding now supports optional fields.

# 2022.12.14 (Build 3)
## Added

* Amazon MSK IAM auth.
* SCRAM SHA256 and SHA512 auth.
* Seek to timestamp.
* LZ4 support.
* Apache Avro support.
* MessagePack support.
* Updates and improvements to the Manual.

# 2022.11.21 (Build 2)