@@ -845,21 +845,36 @@ public struct TopicOption: Readable, Writable {
 
 public struct TopicPartition: Readable, Writable {
   public let id: UVarint
+  public let leaderId: UVarint
+  public let replicaNodeIds: [UVarint]
+  public let inSyncReplicaNodeIds: [UVarint]
 
   public init(
-    id: UVarint
+    id: UVarint,
+    leaderId: UVarint,
+    replicaNodeIds: [UVarint],
+    inSyncReplicaNodeIds: [UVarint]
   ) {
     self.id = id
+    self.leaderId = leaderId
+    self.replicaNodeIds = replicaNodeIds
+    self.inSyncReplicaNodeIds = inSyncReplicaNodeIds
   }
 
   public static func read(from inp: InputPort, using buf: inout Data) -> TopicPartition {
     return TopicPartition(
-      id: UVarint.read(from: inp, using: &buf)
+      id: UVarint.read(from: inp, using: &buf),
+      leaderId: UVarint.read(from: inp, using: &buf),
+      replicaNodeIds: [UVarint].read(from: inp, using: &buf),
+      inSyncReplicaNodeIds: [UVarint].read(from: inp, using: &buf)
     )
   }
 
   public func write(to out: OutputPort) {
     id.write(to: out)
+    leaderId.write(to: out)
+    replicaNodeIds.write(to: out)
+    inSyncReplicaNodeIds.write(to: out)
   }
 }
 
